--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,600&display=swap"
@@ -573,7 +574,9 @@
         </div>
       </section>
       <footer class="footer">
-        <a href="#"><img src="images/logo.png" alt="logo image" class="footer__logo" /></a>
+        <a href="#"
+          ><img src="images/logo.png" alt="logo image" class="footer__logo"
+        /></a>
         <div class="footer__social">
           <h3 class="footer__header">We are social</h3>
           <ul class="footer__list">
